@@ -4,15 +4,21 @@ import com.example.continent.application.domain.model.Continent;
 import com.example.continent.application.domain.repository.ContinentRepository;
 import com.example.continent.application.domain.service.ContinentService;
 import com.example.continent.application.dto.ContinentDto;
+import com.example.continent.application.exception.ResourceAlreadyExistsException;
+import com.example.continent.application.exception.ResourceNotFoundException;
 import com.example.continent.application.mapper.ContinentMapper;
+import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class ContinentServiceImpl implements ContinentService {
 
     private final ContinentRepository continentRepository;
@@ -20,36 +26,43 @@ public class ContinentServiceImpl implements ContinentService {
 
     @Override
     public ContinentDto create(ContinentDto dto) {
+        // Check duplicate code
+        if (continentRepository.existsByCode(dto.getCode())) {
+            throw new ResourceAlreadyExistsException("Continent with code " + dto.getCode() + " already exists");
+        }
         Continent continent = continentMapper.toEntity(dto);
         return continentMapper.toDto(continentRepository.save(continent));
     }
 
     @Override
-    public ContinentDto update(Long id, ContinentDto dto) {
-        Continent continent = continentRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Continent not found"));
-        continent.setCode(dto.getCode());
-        continent.setName(dto.getName());
-        return continentMapper.toDto(continentRepository.save(continent));
-    }
-
-    @Override
-    public void delete(Long id) {
-        continentRepository.deleteById(id);
-    }
-
-    @Override
     public ContinentDto getById(Long id) {
-        return continentRepository.findById(id)
-                .map(continentMapper::toDto)
-                .orElseThrow(() -> new RuntimeException("Continent not found"));
+        Continent continent = continentRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Continent with id " + id + " not found"));
+        return continentMapper.toDto(continent);
     }
 
     @Override
     public List<ContinentDto> getAll() {
         return continentRepository.findAll()
-                .stream()
-                .map(continentMapper::toDto)
-                .collect(Collectors.toList());
+                .stream().map(continentMapper::toDto).toList();
+    }
+
+    @Override
+    public ContinentDto update(Long id, ContinentDto dto) {
+        Continent continent = continentRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Continent with id " + id + " not found"));
+
+        continent.setName(dto.getName());
+        continent.setCode(dto.getCode());
+
+        return continentMapper.toDto(continentRepository.save(continent));
+    }
+
+    @Override
+    public void delete(Long id) {
+        Continent continent = continentRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Continent with id " + id + " not found"));
+
+        continentRepository.delete(continent);
     }
 }
